# skydiving-video-editor

./: CMakeLists.txt  README.md  ideas.md  references.md  tasks.md  test.cpp
MyLib/: CMakeLists.txt  mylib.cpp  mylib.h
scripts/: build  configure  run
src/: Video.cpp  Video.hpp  main.cpp
